	* Source/Additions/GSXML.m: ditto
	* Tools/AGSHtml.m: Modified for changed GSXML
	* Tools/AGSIndex.m: ditto
	* Tools/AGSParser.m: ditto
	* Tools/autogsdoc.m: ditto
	* Tools/defaults.m: Fixed typo
	Mostly, changes to make methods which were intended to be private
	really private, and lots of modifications to make mathod names
	consistent with OpenStep usage ... suggestions made by many people.

2002-05-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLog.m: Altered logging format for compatibility with
	MacOS-X (and easier collating).  Thanks to report by lcampbell

2002-05-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: GSFromUnicode(), GSToUnicode(), bugfix - ensure
	that returned memory is allocated from specified zone, rather than
	returning internal buffer.
	* Tools/AGSIndex.m: When a string missmatch is found when merging,
	update the output to the new string as well as warning.
	* Tools/autogsdoc.m: Don't automatically include refs to installed
	copies of the project being documented.

2002-05-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Don't try to release memory using free()
	when it was allocated using NSZoneMalloc().
	* Tools/autogsdoc.m: Improve dependency rule management.
	* Tools/AGSParser.h: ditto
	* Tools/AGSParser.m: ditto
	* Tools/AGSIndex.h: ditto
	* Tools/AGSIndex.m: ditto
	Store all dependency information in the .igsdoc file and keep it up
	to date.  Never regenerate a file that doesn't need it.
	Mostly the changes are to cope with the fact that we now have
	common files into which all functions, constants, variables, and
	typedefs within a project are combined.

2002-05-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Rationalise so that all conversion operations
	go through the two new functions.  Gets rid of a load of old code.
	* Source/GSString.m: ([-replaceCharactersInRange:withString:])
	minor performance enhancement when copying from a 16-bit string
	to an 8-bit string.
