@@ -222,7 +222,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
   [self ignoreReadDescriptor];
   [self ignoreWriteDescriptor];
 
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
   /*
    * The gzDescriptor should always be closed when we have done with it.
    */
@@ -750,7 +750,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
   d = [NSMutableData dataWithCapacity: 0];
   if (isStandardFile)
     {
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
       if (gzDescriptor != 0)
 	{
 	  while ((len = gzread(gzDescriptor, buf, sizeof(buf))) > 0)
@@ -767,7 +767,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
     }
   else
     {
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
       if (gzDescriptor != 0)
 	{
 	  if ((len = gzread(gzDescriptor, buf, sizeof(buf))) > 0)
@@ -801,7 +801,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
   if (isNonBlocking == YES)
     [self setNonBlocking: NO];
   d = [NSMutableData dataWithCapacity: 0];
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
   if (gzDescriptor != 0)
     {
       while ((len = gzread(gzDescriptor, buf, sizeof(buf))) > 0)
@@ -838,7 +838,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
 
       buf = NSZoneMalloc(NSDefaultMallocZone(), len);
       d = [NSMutableData dataWithBytesNoCopy: buf length: len];
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
       if (gzDescriptor != 0)
 	{
 	  got = gzread(gzDescriptor, [d mutableBytes], len);
@@ -863,7 +863,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
 	{
 	  int	chunk = len > sizeof(buf) ? sizeof(buf) : len;
 
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
 	  if (gzDescriptor != 0)
 	    {
 	      got = gzread(gzDescriptor, buf, chunk);
@@ -908,7 +908,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
 	{
 	  toWrite = NETBUF_SIZE;
 	}
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
       if (gzDescriptor != 0)
 	{
 	  rval = gzwrite(gzDescriptor, (char*)ptr+pos, toWrite);
@@ -1018,7 +1018,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
 
   if (isStandardFile && descriptor >= 0)
     {
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
       if (gzDescriptor != 0)
 	{
 	  result = gzseek(gzDescriptor, 0, SEEK_CUR);
@@ -1042,7 +1042,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
 
   if (isStandardFile && descriptor >= 0)
     {
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
       if (gzDescriptor != 0)
 	{
 	  result = gzseek(gzDescriptor, 0, SEEK_END);
@@ -1066,7 +1066,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
 
   if (isStandardFile && descriptor >= 0)
     {
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
       if (gzDescriptor != 0)
 	{
 	  result = gzseek(gzDescriptor, (off_t)pos, SEEK_SET);
@@ -1096,7 +1096,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
   [self ignoreWriteDescriptor];
 
   [self setNonBlocking: wasNonBlocking];
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
   if (gzDescriptor != 0)
     {
       gzclose(gzDescriptor);
@@ -1435,7 +1435,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
 	  item = [readInfo objectForKey: NSFileHandleNotificationDataItem];
 	  length = [item length];
 
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
 	  if (gzDescriptor != 0)
 	    {
 	      received = gzread(gzDescriptor, buf, sizeof(buf));
@@ -1489,7 +1489,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
 	    {
 	      int	written;
 
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
 	      if (gzDescriptor != 0)
 		{
 		  written = gzwrite(gzDescriptor, (char*)ptr+writePos,
@@ -1608,7 +1608,7 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
 
 - (BOOL) useCompression
 {
-#ifdef	HAVE_ZLIB
+#if	USE_ZLIB
   int	d;
 
   if (gzDescriptor != 0)
